crates/pyxray-render/tests/snapshots/snapshots__amber-dashboard.snap
---
source: crates/pyxray-render/tests/snapshots.rs
expression: text
---
┌                                                                                                  ┐
  pyxray  sketchy.py                             21 lines · 16 statements · depth 2 · cyclomatic 2
  reads the environment → makes 2 network calls → DELETES /tmp/stage → evaluates code at runtime …
└ risk ██████████████████  100  read it first                                    ·▸× ≈»§ ‡ ···· ¶· ┘
┌ T E X T U R E                                                                                    ┐
  ▂▂▂▂▂▂▂▂▂▂···▂▂▂▂▂▂▂▂▂▂····▂▂▂▂▂▂▂▂▂▂····▂▂▂▂▂▂▂▂▂▂▂▂▂▂····▂▂▂▂▂▄▄▄▄██████▄▄▄▄····▂▂▂▂▂▂▂▂▂▂▂▂▂▂
               !!!!!!        !!!!!▸▸▸▸▸    !!!!!    !!!!!         ▸▸▸▸▸▸▸▸▸!!!!!    !!!!!!!!!!¶¶¶¶
└                                                                                                  ┘
┌ F L O W                                              ┐  ┌ C A P A B I L I T I E S                ┐
     1   ├─ import os, subprocess, shutil, pickle, b…        ≈ net 2!   § env 2!   » shell 2!
     2   ├─ import requests                                  × delete 1!   ‡ eval 1!   ▸ write 3
     4 ! ├─ TOKEN = os.environ["API_TOKEN"]        env    └                                        ┘
     5   ├─ STAGING = "/tmp/stage"                        ┌ W H A T   I T   D O E S                ┐
     7 ! ├─ shutil.rmtree(STAGING, ignore_err…  delete         4 ! § getenv   …! reads a secret f…
     8   ├─ os.makedirs(STAGING)                 write         7 ! × rmtree   …! recursively dele…
    10 ! ├─ resp = requests.get("https://example…  net         8   ▸ mkdir    /tmp/stage
    11   ├─ blob = base64.b64decode(resp.content)             10 ! ≈ GET      …! verify=False — T…
    12 ! ├─ config = pickle.loads(blob)           eval        12 ! ‡ unpickle …! unpickling runs …
    14 ! ├─ for name, script in config["steps"]               15 · ▸ truncate f"{STAGING}/{name}.…
    15   │  ├─ with open(f"{STAGING}/{name}.sh…  write        16 · ▸ write    open(f"{STAGING}/{n…
    16   │  │  └─ fh.write(script)               write        17 ! » run      …! runs an external…
    17 ! │  └─ subprocess.run(f"bash {STAGING}…  shell        19 ! ≈ POST     …! sends data to a …
    19 ! ├─ requests.post("https://example.i…  net env        19   § probe    os.uname
  … +1 more subprocess.run(["rm", "-rf", STAGI…  shell        20 ! » run      …! runs an external…
└                                                      ┘  └                                        ┘
                                                          ┌ I M P O R T S                          ┐
                                                              os
                                                              subprocess
                                                              shutil
                                                              pickle
                                                              base64
                                                          └                                        ┘
                                                          ┌ V A L U E S                            ┐
                                                               4 TOKEN   ?        os.environ["AP…
                                                               5 STAGING str      "/tmp/stage"
                                                              10 resp    response requests.get("…
                                                              11 blob    ?        base64.b64deco…
                                                              12 config  ?        pickle.loads(b…
                                                              14 name    ?        config["steps"]
                                                              14 script  ?        config["steps"]
                                                          └                                        ┘
                                                          ┌ C A L L S                              ┐
                                                            subprocess.run                      x2
                                                            open
                                                            print
                                                            base64.b64decode
                                                            <file>.write
                                                            os.makedirs
                                                            os.uname
                                                            pickle.loads
                                                            requests.get
                                                          └                                        ┘
                                                          ┌ S H A P E                              ┐
                                                            21    16    2     2     0     12
                                                          └                                        ┘
